# gwsocket

./: .gitignore  .travis.yml  AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  README.md  configure.ac  gwsocket.1
src/: base64.c  base64.h  gslist.c  gslist.h  gwsocket.c  gwsocket.h  log.c  log.h  sha1.c  websocket.c  websocket.h  xmalloc.c  xmalloc.h
